--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Tải lên ảnh</title>
+    <!-- Thêm liên kết tới Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <!-- Thêm CSS tùy chỉnh -->
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
 </head>
 <body>
-    <h1>Tải lên ảnh của bạn</h1>
-    <form method="post" enctype="multipart/form-data">
-        <input type="file" name="file" required>
-        <input type="submit" value="Tải lên">
-    </form>
+    <div class="container">
+        <h1 class="mt-5">Tải lên ảnh của bạn</h1>
+        <form method="post" enctype="multipart/form-data" class="mt-4">
+            <div class="form-group">
+                <input type="file" name="file" required class="form-control-file">
+            </div>
+            <button type="submit" class="btn btn-primary">Tải lên</button>
+        </form>
+    </div>
+    <!-- Thêm Bootstrap JS và jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
