--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,13 +6,11 @@ h1 {
     text-align: center;
 }
 
-.container {
-    max-width: 800px;
-    margin-top: 50px;
+.navbar-brand {
+    font-weight: bold;
 }
 
-img {
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 5px;
+footer {
+    background-color: #e9ecef;
+    padding: 10px 0;
 }
