--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
 {% endwith %}
 <form method="post" enctype="multipart/form-data" class="mt-4" onsubmit="showLoading()">
     <div class="form-group">
-        <input type="file" name="file" required class="form-control-file">
+        <input  type="file" name="file" required class="form-control-file">
     </div>
-    <button type="submit" class="btn btn-primary">Tải lên</button>
+    <button style="border-radius: 10px;" type="submit" class="btn btn-primary">Tải lên</button>
 </form>
 <!-- Thông báo chờ -->
 <div id="loading" class="mt-4" style="display: none;">
