--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="{{ url_for('index') }}">Làm mờ ảnh theo độ sâu</a>
+            <a class="navbar-brand" href="{{ url_for('index') }}">Image Brokeh</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Chuyển đổi điều hướng">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,7 @@
     <!-- Footer -->
     <footer class="bg-light text-center text-lg-start mt-5">
         <div class="text-center p-3">
-            © 2023 Bản quyền thuộc về: <a class="text-dark" href="#">Tên của bạn</a>
+            Computer vision project of <a class="text-dark" href="#">Viet Huy Duong|Tho Quang Nguyen</a>
         </div>
     </footer>
 
